--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -37,13 +37,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\r\n",
-      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://academicpages.github.io/files/paper1.pdf\r\n",
-      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://academicpages.github.io/files/paper2.pdf\r\n",
-      "2015-10-01\tPaper Title Number 3\tJournal 1\tThis paper is about the number 3. The number 4 is left for future work.\tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://academicpages.github.io/files/paper3.pdf"
+      "'cat' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -97,6 +95,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -113,58 +124,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2009-10-01</td>\n",
-       "      <td>Paper Title Number 1</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 1. The number 2...</td>\n",
-       "      <td>Your Name, You. (2009). \"Paper Title Number 1....</td>\n",
-       "      <td>paper-title-number-1</td>\n",
-       "      <td>http://academicpages.github.io/files/paper1.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-10-01</td>\n",
-       "      <td>Paper Title Number 2</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 2. The number 3...</td>\n",
-       "      <td>Your Name, You. (2010). \"Paper Title Number 2....</td>\n",
-       "      <td>paper-title-number-2</td>\n",
-       "      <td>http://academicpages.github.io/files/paper2.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-10-01</td>\n",
-       "      <td>Paper Title Number 3</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 3. The number 4...</td>\n",
-       "      <td>Your Name, You. (2015). \"Paper Title Number 3....</td>\n",
-       "      <td>paper-title-number-3</td>\n",
-       "      <td>http://academicpages.github.io/files/paper3.pdf</td>\n",
+       "      <td>2025-01-17</td>\n",
+       "      <td>RemapVR: An Immersive Authoring Tool for Rapid...</td>\n",
+       "      <td>CHI 2025</td>\n",
+       "      <td>Remapping techniques in VR such as repositioni...</td>\n",
+       "      <td>it is not available yet.</td>\n",
+       "      <td>/publication/2025-01-17-RemapVR-An-Immersive-A...</td>\n",
+       "      <td>http://kong-johnny.github.io/files/RemapVR-An-...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     pub_date                 title      venue  \\\n",
-       "0  2009-10-01  Paper Title Number 1  Journal 1   \n",
-       "1  2010-10-01  Paper Title Number 2  Journal 1   \n",
-       "2  2015-10-01  Paper Title Number 3  Journal 1   \n",
+       "     pub_date                                              title     venue  \\\n",
+       "0  2025-01-17  RemapVR: An Immersive Authoring Tool for Rapid...  CHI 2025   \n",
        "\n",
        "                                             excerpt  \\\n",
-       "0  This paper is about the number 1. The number 2...   \n",
-       "1  This paper is about the number 2. The number 3...   \n",
-       "2  This paper is about the number 3. The number 4...   \n",
+       "0  Remapping techniques in VR such as repositioni...   \n",
        "\n",
-       "                                            citation              url_slug  \\\n",
-       "0  Your Name, You. (2009). \"Paper Title Number 1....  paper-title-number-1   \n",
-       "1  Your Name, You. (2010). \"Paper Title Number 2....  paper-title-number-2   \n",
-       "2  Your Name, You. (2015). \"Paper Title Number 3....  paper-title-number-3   \n",
+       "                   citation  \\\n",
+       "0  it is not available yet.   \n",
        "\n",
-       "                                         paper_url  \n",
-       "0  http://academicpages.github.io/files/paper1.pdf  \n",
-       "1  http://academicpages.github.io/files/paper2.pdf  \n",
-       "2  http://academicpages.github.io/files/paper3.pdf  "
+       "                                            url_slug  \\\n",
+       "0  /publication/2025-01-17-RemapVR-An-Immersive-A...   \n",
+       "\n",
+       "                                           paper_url  \n",
+       "0  http://kong-johnny.github.io/files/RemapVR-An-...  "
       ]
      },
      "execution_count": 3,
@@ -288,11 +274,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md  2015-10-01-paper-title-number-3.md\r\n",
-      "2010-10-01-paper-title-number-2.md\r\n"
+      "'ls' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -363,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
